addressing pr comments

--- a/notebooks/model_repo.ipynb
+++ b/notebooks/model_repo.ipynb
@@ -1,18 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "© 2021 Neuralmagic, Inc. // [Neural Magic Legal](https://neuralmagic.com/legal)\n",
-    "# Downloading from Neural Magic’s Model Repo\n",
+    "# Downloading from Sparsezoo\n",
     "\n",
-    "This notebook provides an easy step-by-step walkthrough for downloading a model from the Neural Magic Model Repository. You will:\n",
+    "This notebook provides an easy step-by-step walkthrough for downloading a model from the Sparsezoo model repository. You will:\n",
     "- Set up the environment\n",
     "- Select a model\n",
     "- Download the model\n",
     "\n",
-    "Reading through this notebook will quickly provide an overview of the pretrained, performance-tuned models available in the Neural Magic Repo. This will take approximately:\n",
+    "Reading through this notebook will quickly provide an overview of the pretrained, performance-tuned models available in the Sparsezoo. This will take approximately:\n",
     "- 15 minutes\n",
     "\n",
     "# Background\n",
@@ -20,8 +27,8 @@
     "\n",
     "To make it easier to use pruned models, Neural Magic is actively:\n",
     "- Creating pruned versions of popular models and datasets\n",
-    "- Thoroughly testing these models with the Neural Magic Inference Engine to ensure performance\n",
-    "- Updating the Neural Magic Repo with these models and datasets\n"
+    "- Thoroughly testing these models with the DeepSparse Engine to ensure performance\n",
+    "- Updating the Sparsezoo Repo with these models and datasets\n"
    ]
   },
   {
@@ -74,10 +81,7 @@
    "source": [
     "## Step 2 - Selecting a Model\n",
     "\n",
-    "Repositories may hold many models, so a simple UI is provided to make this selection process easier. Within the UI, ﬁlters can be applied for models trained in/on speciﬁc domains or datasets. Each network architecture listed will also include options for the dataset it was trained on, ML frameworks (ONNX, PyTorch, TensorFlow, Keras), and the type. The type refers to how the models were trained and/or recalibrated, speciﬁcally:\n",
-    "- base - baseline model, trained generally as in the original paper\n",
-    "- recal - a recalibrated model that is recalibrated to the point of fully recovering the baseline model’s metrics\n",
-    "- recal-perf - a recalibrated model that is recalibrated for performance to the point of recovering 99% of the baseline model’s metrics"
+    "Repositories may hold many models, so a simple UI is provided to make this selection process easier. Within the UI, ﬁlters can be applied for models trained in/on speciﬁc domains or datasets. Each network architecture listed will also include options for the dataset it was trained on, ML frameworks (ONNX, PyTorch, TensorFlow, Keras), and the type."
    ]
   },
   {
@@ -108,7 +112,7 @@
     }
    ],
    "source": [
-    "from utils import SelectDomainWidgetContainer\n",
+    "from sparsezoo.nbutils import SelectDomainWidgetContainer\n",
     "\n",
     "print(\"creating  domain select ui...\")\n",
     "domain_container = SelectDomainWidgetContainer()\n",
@@ -124,9 +128,9 @@
     "import os\n",
     "from sparsezoo.objects import Model\n",
     "from sparsezoo.utils import clean_path\n",
-    "from utils import ModelSelectWidgetContainer\n",
+    "from sparsezoo.nbutils import ModelSelectWidgetContainer\n",
     "\n",
-    "domain, sub_domain = domain_container.selected_domain_info\n",
+    "domain, sub_domain = domain_container.selected_domain_infog\n",
     "override_parent_path = clean_path(os.path.join(\".\", notebook_name))\n",
     "\n",
     "print(\"searching for models...\")\n",
@@ -167,10 +171,8 @@
     "## Next Step\n",
     "\n",
     "You may want to explore one of these paths:\n",
-    "- Perform transfer learning, using the PyTorch Transfer Learning notebook\n",
-    "- Optimize your model using the Neural Magic Recalibration Tooling, described in the PyTorch or TensorFlow Pruning notebook\n",
-    "\n",
-    "Refer to Getting Started with Neural Magic for a description of each notebook."
+    "- Optimize the model further with the SparseML package\n",
+    "- Test the performance in an inference engine that supports sparsity such as the DeepSparse Engine\n"
    ]
   }
  ],
