Rebase with sparsezoo.zoo

--- a/notebooks/model_repo.ipynb
+++ b/notebooks/model_repo.ipynb
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from sparsezoo.objects import Model\n",
+    "from sparsezoo import Zoo\n",
     "from sparsezoo.utils import clean_path\n",
     "from sparsezoo.nbutils import ModelSelectWidgetContainer\n",
     "\n",
@@ -134,7 +134,7 @@
     "override_parent_path = clean_path(os.path.join(\".\", notebook_name))\n",
     "\n",
     "print(\"searching for models...\")\n",
-    "models = Model.search_downloadable(domain, sub_domain, override_parent_path=override_parent_path)\n",
+    "models = Zoo.search_models(domain, sub_domain, override_parent_path=override_parent_path)\n",
     "\n",
     "print(\"creating model select ui...\")\n",
     "container = ModelSelectWidgetContainer(models)\n",
