Added domains to SelectDomainWidget constructor

--- a/notebooks/model_download.ipynb
+++ b/notebooks/model_download.ipynb
@@ -45,19 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "checking setup for model_repo...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "notebook_name = \"model_repo\"\n",
     "print(\"checking setup for {}...\".format(notebook_name))\n",
@@ -86,31 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating ui...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3bc07cf99ce14fc9b8be061a7f9d365a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<h4 >Filters</h4>'), HBox(children=(HTML(value='<span >Domains:</span>'), Dropdown(…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sparsezoo.nbutils import SelectDomainWidgetContainer\n",
     "\n",
@@ -130,7 +100,7 @@
     "from sparsezoo.utils import clean_path\n",
     "from sparsezoo.nbutils import ModelSelectWidgetContainer\n",
     "\n",
-    "domain, sub_domain = domain_container.selected_domain_infog\n",
+    "domain, sub_domain = domain_container.selected_domain_info\n",
     "override_parent_path = clean_path(os.path.join(\".\", notebook_name))\n",
     "\n",
     "print(\"searching for models...\")\n",
