Move optim to sparse

--- a/notebooks/model_download.ipynb
+++ b/notebooks/model_download.ipynb
@@ -23,7 +23,7 @@
     "- 15 minutes\n",
     "\n",
     "# Background\n",
-    "Neural networks can take a long time to train. Model optimization techniques such as model pruning may be necessary to achieve both performance and optimization goals. However, these model optimizations can involve many trials and errors due to a large number of hyperparameters. Fortunately, in the computer vision and natural language space, pruned (sparsiﬁed) neural networks transfer learn.\n",
+    "Neural networks can take a long time to train. Model sparsification techniques such as model pruning may be necessary to achieve both performance and sparsification goals. However, the sparsification of models can involve many trials and errors due to a large number of hyperparameters. Fortunately, in the computer vision and natural language space, pruned (sparsiﬁed) neural networks transfer learn.\n",
     "\n",
     "To make it easier to use pruned models, Neural Magic is actively:\n",
     "- Creating pruned versions of popular models and datasets\n",
