--- a/notebooks/model_download.ipynb
+++ b/notebooks/model_download.ipynb
@@ -1,17 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "© 2021 Neuralmagic, Inc. // [Neural Magic Legal](https://neuralmagic.com/legal)\n",
+    "© 2022 Neuralmagic, Inc. // [Neural Magic Legal](https://neuralmagic.com/legal)\n",
     "# Downloading from Sparsezoo\n",
     "\n",
     "This notebook provides an easy step-by-step walkthrough for downloading a model from the Sparsezoo model repository. You will:\n",
@@ -73,20 +66,11 @@
    "source": [
     "## Step 2 - Selecting a Model\n",
     "\n",
-    "Repositories may hold many models, so a simple UI is provided to make this selection process easier. Within the UI, ﬁlters can be applied for models trained in/on speciﬁc domains or datasets. Each network architecture listed will also include options for the dataset it was trained on, ML frameworks (ONNX, PyTorch, TensorFlow, Keras), and the type."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sparsezoo.nbutils import SelectDomainWidgetContainer\n",
+    "SparseZoo repository holds a wide range of different models. We display all of the them on the main page of [SparseZoo](https://sparsezoo.neuralmagic.com/). \n",
     "\n",
-    "print(\"creating  domain select ui...\")\n",
-    "domain_container = SelectDomainWidgetContainer()\n",
-    "display(domain_container.create())"
+    "Once a model of interest is found, the next step is to fetch the stub of the model. A stub is a short string, serving as a pointer to the model data stored. An example of a stub is `zoo:cv/classification/vgg-19/pytorch/sparseml/imagenet/pruned-moderate`. The stub can be used to download the model.\n",
+    "\n",
+    "Alternatively, one may use `search_models` function, to directly search for appropriate model from Python API."
    ]
   },
   {
@@ -96,19 +80,35 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from sparsezoo import Zoo\n",
-    "from sparsezoo.utils import clean_path\n",
-    "from sparsezoo.nbutils import ModelSelectWidgetContainer\n",
+    "from sparsezoo import Model, search_models, clean_path\n",
     "\n",
-    "domain, sub_domain = domain_container.selected_domain_info\n",
-    "override_parent_path = clean_path(os.path.join(\".\", notebook_name))\n",
+    "download_path = clean_path(os.path.join(\".\", notebook_name))\n",
     "\n",
-    "print(\"searching for models...\")\n",
-    "models = Zoo.search_models(domain, sub_domain, override_parent_path=override_parent_path)\n",
+    "## Selecting a model from a retrieved stub ##\n",
     "\n",
-    "print(\"creating model select ui...\")\n",
-    "container = ModelSelectWidgetContainer(models)\n",
-    "display(container.create())"
+    "stub = \"zoo:cv/classification/vgg-19/pytorch/sparseml/imagenet/pruned-moderate\"\n",
+    "model = Model(stub)\n",
+    "print(f\"Retrieved a model\\n{str(model)}\\nfrom a stub:{stub}...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Selecting a model using the search functionality ##\n",
+    "\n",
+    "n_first_print = 5 # print out first n models found\n",
+    "domain, sub_domain = \"cv\", \"classification\" # defining the search criteria\n",
+    "\n",
+    "print(\"Searching for models...\")\n",
+    "models = search_models(domain, sub_domain)\n",
+    "print(f\"Given the search criteria, found {len(models)} models...\")\n",
+    "print(f\"Printing first {n_first_print} models...\")\n",
+    "[print(f\"\\t{model}\") for model in models[:n_first_print]]\n",
+    "model = models[0]\n",
+    "print(f\"\\nSelecting the first model: {str(model)}.\")"
    ]
   },
   {
@@ -127,11 +127,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
-    "model = container.selected_model\n",
-    "\n",
-    "print(\"Downloading model...\")\n",
-    "model.download(overwrite=True)"
+    "model.download(directory_path = download_path, override = True)\n",
+    "print(f\"Model download to {model.path}\")"
    ]
   },
   {
@@ -162,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
