fix main README examples and add option to limit search response time

--- a/notebooks/model_download.ipynb
+++ b/notebooks/model_download.ipynb
@@ -54,6 +54,7 @@
     "try:\n",
     "    # make sure sparsezoo is installed\n",
     "    import sparsezoo\n",
+    "    print(\"sparsezoo available for model download\")\n",
     "except Exception as ex:\n",
     "    raise Exception(\n",
     "        \"please install sparsezoo using the setup.py file before continuing\"\n",
@@ -99,16 +100,16 @@
    "source": [
     "## Selecting a model using the search functionality ##\n",
     "\n",
-    "n_first_print = 5 # print out first n models found\n",
-    "domain, sub_domain = \"cv\", \"classification\" # defining the search criteria\n",
+    "n_first_print = 5  # print out first n models found\n",
+    "domain, sub_domain = \"cv\", \"classification\"  # defining the search criteria\n",
     "\n",
     "print(\"Searching for models...\")\n",
-    "models = search_models(domain, sub_domain)\n",
-    "print(f\"Given the search criteria, found {len(models)} models...\")\n",
-    "print(f\"Printing first {n_first_print} models...\")\n",
-    "[print(f\"\\t{model}\") for model in models[:n_first_print]]\n",
-    "model = models[0]\n",
-    "print(f\"\\nSelecting the first model: {str(model)}.\")"
+    "model_stubs = search_models(domain, sub_domain, return_stubs=True)\n",
+    "print(f\"Given the search criteria, found {len(model_stubs)} models...\")\n",
+    "print(f\"Printing first {n_first_print} model stubs...\")\n",
+    "[print(f\"\\t{stub}\") for stub in model_stubs[:n_first_print]]\n",
+    "model_stub = model_stubs[0]\n",
+    "print(f\"\\nSelecting the first model: {str(model_stub)}.\")"
    ]
   },
   {
@@ -117,7 +118,7 @@
    "source": [
     "### Step 3 - Downloading the Model\n",
     "\n",
-    "After making a model selection, run the cell block below to download the model locally. By default, it will save the model to an appropriately named folder under the current working directory. You can change the save_dir if you'd like to save to another location on the local system.\n"
+    "After making a model selection, run the cell block below to download the model locally from the selected stub. By default, it will save the model to an appropriately named folder under the current working directory. You can change the save_dir if you'd like to save to another location on the local system.\n"
    ]
   },
   {
@@ -127,7 +128,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "model.download(directory_path = download_path, override = True)\n",
+    "model = Model(model_stub)\n",
+    "# calling .path triggers model download\n",
     "print(f\"Model download to {model.path}\")"
    ]
   },
@@ -159,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
