Apply suggestions from code review

--- a/notebooks/model_download.ipynb
+++ b/notebooks/model_download.ipynb
@@ -88,7 +88,7 @@
     "## Selecting a model from a retrieved stub ##\n",
     "\n",
     "stub = \"zoo:cv/classification/vgg-19/pytorch/sparseml/imagenet/pruned-moderate\"\n",
-    "model = Model(stub, download_path = download_path)\n",
+    "model = Model(stub, download_path=download_path)\n",
     "print(f\"Retrieved a model\\n{str(model)}\\nfrom a stub:{stub}...\")"
    ]
   },
